# XAI-Project

./: .env.development  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  README_NEW.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: .env.production
docs/: API.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVELOPMENT.md  GROK_API_INTEGRATION.md  KAGGLE_DATASET.md
outputs/: grok_analysis_results.csv
scripts/: create_sample_csv_simple.py  create_sample_from_csv.py  ingest_sample.py  ingest_twitter.py  insert_insights_mock.py  load_test.py  transform_kaggle.py
src/grok_insights/: __init__.py  main.py
src/grok_insights/api/: conversations.py  health.py  insights.py
src/grok_insights/core/: logging_config.py  settings.py
src/grok_insights/db/: base.py  models.py  session.py
src/grok_insights/schemas/: __init__.py
src/grok_insights/services/: conversation_service.py
src/grok_insights/worker/: grok_client.py  processor.py
tests/: conftest.py
tests/integration/: test_worker_e2e.py
tests/unit/: test_core.py
